# CliffordKAN

./: .gitignore  LICENSE  README.md  demo.py  env.yaml  experiments.py  pyproject.toml  requirements.txt
clkan/: __init__.py
clkan/experiments/: clifford_fit_func.py  fit_formulas.py  knot_dataset.py  results.json  run_crossval.py  start_experiments.py
clkan/experiments/generated_datasets/: ff_mult.pt  ff_square.pt
clkan/models/: CVKAN.py  CliffordKAN.py
clkan/models/wrapper/: ClVKANWrapper.py
clkan/train/: train_loop.py
clkan/utils/: __init__.py  eval_model.py  loss_functions.py  norm_functions.py
clkan/utils/dataloading/: crossval_splitter.py  csv_dataloader.py
clkan/utils/plotting/: funcfit_result_visualizer.py  funcfit_result_visualizer_highdims.py  grid_comparison.py  pandas_dataloader.py
cvkan/: __init__.py
cvkan/experiments/: clifford_fit_func.py  fit_formulas.py  knot_dataset.py  results_original.json  run_crossval.py  start_experiments.py
cvkan/experiments/generated_datasets/: ff_mult.pt  ff_sin.pt  ff_square.pt  ff_squaresquare.pt  ph_holo_c.pt
cvkan/models/: CVKAN.py  ClVKAN.py  CliffordKAN.py
cvkan/models/functions/: ComplexSilu.py
cvkan/train/: train_loop.py
cvkan/utils/: early_stopping.py  eval_model.py  loss_functions.py  norm_functions.py
cvkan/utils/dataloading/: create_complex_dataset.py  crossval_splitter.py  csv_dataloader.py
cvkan/utils/plotting/: funcfit_result_visualizer.py  pandas_dataloader.py
images/: visualizations.py
src/cvkan/experiments/: results.json
src/cvkan/experiments/results_backups/: results_2025-01-23.json  results_2025-01-26_17-30-00.json  results_20250123.json  results_backup_2025-01-21_15-59-27.json  results_backup_2025-01-21_16-44-00.json  results_backup_2025-01-21_18-27-41.json  results_backup_2025-01-21_18-46-11.json  results_backup_2025-01-22_12-41-47.json  results_backup_2025-01-22_12-45-55.json  results_backup_2025-01-22_12-53-04.json  results_backup_2025-01-22_15-35-35.json  results_backup_2025-01-22_23-55-47.json  results_backup_2025-01-22_23-56-33.json  results_backup_2025-01-23_17-24-47.json  results_backup_2025-01-23_17-25-13.json  results_backup_2025-01-23_18-13-06.json  results_backup_2025-01-23_18-19-48.json  results_backup_2025-01-23_18-47-00.json  results_backup_2025-01-23_19-34-13.json  results_backup_2025-01-23_19-46-20.json  results_backup_2025-01-23_19-53-11.json  results_backup_2025-01-23_19-56-00.json  results_backup_2025-01-23_19-56-21.json  results_backup_2025-01-26_22-42-45.json  results_backup_2025-01-27_01-43-38.json  results_backup_2025-01-27_01-46-34.json
src/cvkan/models/: CliffordKAN.py
src/cvkan/utils/plotting/: cplotting_tools.py
